oops - replacing more boilerplate, fixing layout bug with menu button

--- a/src/assets/sass/_navbar.scss
+++ b/src/assets/sass/_navbar.scss
@@ -9,6 +9,10 @@
     &:focus {
       outline: none;
     }
+
+    .fas {
+      margin-left: 0.2rem;
+    }
   }
   .navbar-brand {
     color: $black;
